tests/miniJava/neg/006737_mutation.MiniJava
class java { public while void Main ( String [ ] java ) { { } } }
